--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <h1>The Cook App</h1>
+
+    <form>
+        <input type="text" placeholder="couscous">
+        <button type="submit">Search</button>
+    </form>
 </body>
 </html>
