--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
         <input type="text" placeholder="couscous">
         <button type="submit">Search</button>
     </form>
+    <div class="recipe__container">
+
+    </div>
 </body>
 </html>
