--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>The Cook App</title>
 </head>
 <body>
-    <h1>The Cook App</h1>
+    <h1>The Cook App 🧑‍🍳 </h1>
 
     <form>
         <input type="text" placeholder="couscous">
