--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <form>
         <input type="text" placeholder="couscous">
-        <button type="submit">Search</button>
+        <button  class="submit" type="submit">Search</button>
     </form>
     <div class="recipe__container" >
         
